# pkb-notes

./: README.md  alembic.ini  docker-compose-test.yaml  pyproject.toml
.devcontainer/: .env  devcontainer.json  docker-compose.yml
.github/workflows/: docker-image.yaml  pr.yaml
scripts/: test
src/app/: main.py
src/app/core/: config.py  db.py  models.py  response.py  security.py
src/app/migrations/: env.py
src/app/migrations/versions/: 86bcda727b2f_add_notes_tags_and_link_them_together.py  aee8b2a9dbc1_create_the_embedding_column.py  ec1005e02a7a_enable_pgvector.py
src/app/slices/note/: constants.py  models.py  router.py  service.py
src/app/slices/tag/: constants.py  models.py  router.py  service.py
tests/: conftest.py  test_note.py  test_tag.py  utils.py
